--- a/style.css
+++ b/style.css
@@ -33,6 +33,29 @@
     color: #e2b714;
 }
 
+.welcome-title {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    height: calc(100vh - 60px);
+}
+
+.welcome-p-title {
+    color: #e2b714;
+    margin: -5rem 0 2rem 0;
+}
+
+.welcome-h1-title,
+.welcome-h1-title-2 {
+    font-size: 56px;
+    margin: 0;
+    line-height: 65px;
+    letter-spacing: -2px;
+    color: #e8e6e3;
+    font-weight: 600;
+}
+
 /* footer section styling */
 footer {
     padding: 15px 23px;
