Work page completed

--- a/style.css
+++ b/style.css
@@ -114,6 +114,12 @@
 
 /* skills end  */
 
+/* work start  */
+.about-me p {
+    text-align: center;
+}
+
+/* work end  */
 
 /* footer section styling */
 footer {
