--- a/style.css
+++ b/style.css
@@ -33,6 +33,13 @@
     color: #e2b714;
 }
 
+.home-img {
+    height: 160px;
+    padding: 1rem;
+    border-radius: 50%;
+    margin-top: -5rem;
+}
+
 .welcome-title {
     justify-content: center;
     align-items: center;
@@ -43,7 +50,7 @@
 
 .welcome-p-title {
     color: #e2b714;
-    margin: -3rem 0 2rem 0;
+    margin: 0 0 2rem 0;
 }
 
 .welcome-h1-title,
