--- a/style.css
+++ b/style.css
@@ -7,6 +7,12 @@
     background-color: #323437;
 }
 
+.background-home {
+    background-image: url('./resources/cover.jpg');
+    background-position: center;
+    background-size: cover;
+}
+
 .min-height {
     min-height: calc(100vh - 54px);
 }
